# python-snippets

./: README.md
dynamic_driver_selection/: README.md  main.py  pyproject.toml
dynamic_driver_selection/snippet/: driver.py
dynamic_driver_selection/snippet/config/: __init__.py  env.py
dynamic_driver_selection/tests/: test_load_driver.py
extensible_request_context/: README.md  main.py  pyproject.toml  requirements.lock.txt
extensible_request_context/snippet/: config.py  context.py  database.py
extensible_request_context/tests/: fakes.py  test_request_context.py
readable_logging_format/: README.md  main.py  pyproject.toml
readable_logging_format/snippet/logs/: style.py  utils.py
readable_logging_format/snippet/logs/formatters/: debug.py  gelf.py
short_uuid/: Makefile  README.md  main.py  pyproject.toml  requirements.lock.txt
short_uuid/snippet/: asgi.py  short_uuid.py
short_uuid/tests/: test_short_uuid.py  test_usage_in_api.py
strict_modular_configuration/: Makefile  README.md  main.py  pyproject.toml  requirements.lock.txt
strict_modular_configuration/snippet/: config.py
strict_modular_configuration/snippet/database/: __init__.py  config.py
strict_modular_configuration/snippet/logging/: __init__.py  config.py
strict_modular_configuration/snippet/tracing/: __init__.py  config.py
template/: requirements.lock.txt
template/snippet/: foo.py
template/tests/: test_foo.py
