[project]
name = "snippet"
version = "0.0.1"
dependencies = []
requires-python = ">=3.8"
description = "Snippet package used to demonstrate something. Refer to README for more info."
readme = "README.md"


[project.optional-dependencies]
dev = ["black", "isort", "pytest"]

[project.entry-points."snippet.config.driver"]
environment = "snippet.config.env:EnvConfig"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["snippet/"]
